# workshop-modern-data-stack

./: README.md  exemplo_func.py  pyproject.toml
.astro/: config.yaml
dags/: exemplo_func.py  pipeline.py
